-
Bug
-
Resolution: Done
-
P4: Low
-
5.5.1
-
None
-
Tested on OSX 10.10.x. and 10.11.3
QSerialPortInfo::availablePorts() lists the wrong ports. The TTY ports listed using Qt 5.4.2 are correct, but 5.5.1 lists wrong TTY ports.
For Gerrit Dashboard: QTBUG-50895 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
149243,2 | Enumerate dial-in devices on OS X | 5.6 | qt/qtserialport | Status: MERGED | +2 | 0 |