Enumerate dial-in devices on OS X

OS X divide serial ports into dialin (tty) and callout
(cu) devices. QSPI did not return a list of dialin devices, that now has
been fixed in this patch.

Task-number: QTBUG-50895
Change-Id: I9f25b8f042ce1fdef9fd140896fc1d7093ee91a1
Reviewed-by: Sergey Belyashov <Sergey.Belyashov@gmail.com>
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>